<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/statisticsBgColor"
    android:orientation="vertical"
    tools:context=".ui.StatisticsActivity">


    <!--  顶部操作栏  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/statistics_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_btn_rc_8"
            android:paddingVertical="6dp"
            android:paddingStart="10dp"
            android:paddingEnd="2dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:tint="?attr/colorControlNormal"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:gravity="center_vertical"
            android:text="@string/statistics_activity_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="12dp"
                        android:paddingStart="14dp"
                        android:paddingEnd="10dp">

                        <com.cyberlight.pocketword.widget.MarqueeTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:ellipsize="marquee"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:singleLine="true"
                            android:text="@string/continuous_completions"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/continuous_completion_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:textColor="?attr/colorPrimary"
                            android:textSize="28sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="12dp"
                        android:paddingStart="14dp"
                        android:paddingEnd="10dp">

                        <com.cyberlight.pocketword.widget.MarqueeTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:ellipsize="marquee"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:singleLine="true"
                            android:text="@string/total_completions"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/total_completion_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:textColor="?attr/colorPrimary"
                            android:textSize="28sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="12dp"
                        android:paddingStart="14dp"
                        android:paddingEnd="10dp">

                        <com.cyberlight.pocketword.widget.MarqueeTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:ellipsize="marquee"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:singleLine="true"
                            android:text="@string/daily_average_count"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/daily_aver_count_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:textColor="?attr/colorPrimary"
                            android:textSize="28sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="12dp"
                        android:paddingStart="14dp"
                        android:paddingEnd="10dp">

                        <com.cyberlight.pocketword.widget.MarqueeTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:ellipsize="marquee"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:singleLine="true"
                            android:text="@string/daily_average_duration"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/daily_aver_dura_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:textColor="?attr/colorPrimary"
                            android:textSize="28sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="12dp"
                    android:paddingStart="14dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/count_trend"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textSize="16sp" />

                    <com.cyberlight.pocketword.widget.LineChartView
                        android:id="@+id/statistics_count_lc"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:paddingStart="5dp"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="12dp"
                    android:paddingStart="14dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/duration_trend"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textSize="16sp" />

                    <com.cyberlight.pocketword.widget.LineChartView
                        android:id="@+id/statistics_duration_lc"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:paddingStart="5dp"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/statistics_test_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="test" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>