<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/play_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PlayActivity">

    <!--  顶部操作栏  -->
    <LinearLayout
        android:id="@+id/play_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/play_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_btn_rc_8"
            android:paddingVertical="6dp"
            android:paddingStart="10dp"
            android:paddingEnd="2dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:tint="?attr/colorControlNormal"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/play_info_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <ImageView
            android:id="@+id/play_settings_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_btn_rc_8"
            android:padding="6dp"
            android:src="@drawable/ic_outline_settings_24"
            app:tint="?attr/colorControlNormal"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <TextView
        android:id="@+id/play_word_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41000003"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/play_mean_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/play_accent_tv" />

    <TextView
        android:id="@+id/play_accent_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/play_word_tv" />

    <TextView
        android:id="@+id/play_known_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/bg_btn_rc_8"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintBottom_toTopOf="@id/play_control_panel" />

    <LinearLayout
        android:id="@+id/play_control_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/play_delay_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="44dp"
            android:layout_marginBottom="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/play_word_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/play_mean_switch"
                android:text="@string/play_word_switch_text"
                android:textColor="?android:attr/textColorSecondary" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/play_mean_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="15dp"
                android:text="@string/play_mean_switch_text"
                android:textColor="?android:attr/textColorSecondary" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/play_sound_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/play_mean_switch"
                android:text="@string/play_sound_switch_text"
                android:textColor="?android:attr/textColorSecondary" />

        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>